src/index.css
/* ... */
.nav-menu-dark {
  display: grid;
  grid-template-columns: repeat(5, auto);
  grid-gap: 10px;
  list-style: none;
  text-align: center;
  width: 50vw;
  justify-content: end;
  margin-right: 7.7rem;
}

.nav-item {
  display: flex;
  align-items: center;
  height: 100px;
}
.nav-link-1 {
  color: grey;
  text-decoration: none;
  padding: 0.5rem 1rem;
}
.nav-link-2 {
  color: #ffffff;
  text-decoration: none;
  padding: 0.5rem 1rem;
}
.nav-link-1:hover {
  color: grey;
}
.nav-link-2:hover {
  color: #ffffff;
}
.check {
  position: relative;
  top: 0.3rem;
}
.menu-icon-1 {
  visibility: hidden;
}
.menu-icon-2 {
  visibility: hidden;
}
.brand {
  margin-left: -0.3rem;
}

/* New Section  */

.technologies {
  text-align: left;
}

.technologies h3 {
  font-weight: normal;
}

/* About US */

.approach2-segment p {
  padding-bottom: 30px;
  padding-right: 120px;
}

.worked-with {
  margin-right: 30px;
}

/* Contact US */
.contact-h1 {
  font-size: 50px;
  font-weight: 600;
}

Form {
  display: flex;
  justify-content: space-evenly;
  margin-bottom: 30px;
}

.about-segment {
  padding: 60px 30px;
}

.kubernetes-img {
  margin-top: 50px;
  border-radius: 5px;
  height: 70%;
}

.dev-team {
  margin: 30px 0;
  align-items: center;
}
.developers {
  max-width: 70%;
  margin: 7rem 0;
}

.location-segment {
  padding-top: 30px;
  text-align: center;
}

.location-segment img {
  margin-left: 90px;
}

.location-segment p {
  padding-right: 20px;
}

.segment {
  min-height: calc(100vmin - 85.38px);
}

.service-subject {
  height: fit-content;
}

.service-subject .image {
  max-height: 15rem;
  border-radius: 5px;
  height: 100%;
  width: 75%;
}

.service-subject p {
  margin-top: 2rem;
  margin-bottom: 1rem;
}

.ui.mini.image.tools {
  width: 60px;
}

.tool-details {
  display: flex !important;
  justify-content: center;
  align-content: center !important;
}

.tools-list .item {
  padding-top: 10px;
}

.tools-list .tool-details {
  padding-top: 10px;
}

.footer-copyright {
  text-align: center;
  margin: auto;
}

.footer-copyright p {
  display: inline;
}

.mission {
  text-align: center;
  margin: auto;
  padding: 20% 0;
}

.mission p {
  padding: 5% 0;
}

.footer-section {
  min-height: fit-content;
}

@media all and (min-width: 992px) {
  .ui.grid > .row > [class*="five wide computer"].column {
    width: 33.25% !important;
  }
}

/* For Smaller Screens E.g Tab */
@media all and (max-width: 1024px) {
  .navbar {
    margin-left: 0.5rem;
    margin-right: 0.5rem;
  }

  .container {
    margin: 0 2rem;
  }

  .brand-img {
    margin-left: 0.5rem;
  }

  .nav-menu {
    margin-right: 0.5rem;
  }

  .developers {
    margin: 0;
    max-width: fit-content;
  }

  .dev-img {
    top: 2rem;
    right: 0;
  }

  .dev-img .img-1 {
    width: 50%;
    height: 50%;
  }
}
@media all and (max-width: 768px) {
  .navbar {
    margin-left: 0.5rem;
    margin-right: 0.5rem;
  }

  .container {
    margin: 0 2rem;
  }

  .brand-img {
    margin-left: 0.5rem;
  }

  .nav-menu {
    margin-right: 0.5rem;
  }

  .developers {
    margin: 0;
    max-width: fit-content;
  }

  .dev-img {
    top: 2rem;
    right: 0;
  }

  .dev-img .img-1 {
    width: 50%;
    height: 50%;
  }

  .product-segment {
    margin-left: 13rem;
  }
}

@media all and (max-width: 700px) {
  .menu-icon-1 {
    visibility: visible;
    padding-right: 3rem;
    cursor: pointer;
  }
  .menu-icon-2 {
    visibility: visible;
    padding-right: 3rem;
    cursor: pointer;
    color: #ffffff !important;
  }
  .navbar {
    position: relative;
  }
  .brand-img {
    margin-left: 1rem;
  }
  .brand-img img {
    font-size: 100px;
  }
  .nav-menu {
    display: flex;
    flex-direction: column;
    width: 100%;
    height: 85vh;
    position: absolute;
    top: 70px;
    left: -100%;
    opacity: 1;
    transition: all 1s ease;
  }
  .nav-menu.active {
    background: #ffffff;
    left: 0;
    width: 100vw;
    opacity: 1;
    transition: all 1s ease;
    z-index: 1;
  }
  .nav-menu-dark {
    display: flex;
    flex-direction: column;
    width: 100%;
    height: 85vh;
    position: absolute;
    top: 70px;
    left: -100%;
    opacity: 1;
    transition: all 1s ease;
  }
  .nav-menu-dark.active {
    background: #100403;
    left: 0;
    width: 100vw;
    opacity: 1;
    transition: all 1s ease;
    z-index: 1;
  }
  .nav-link-1 {
    text-align: center;
    padding: 1rem;
    width: 100%;
    display: table;
  }
  .nav-btn {
    text-align: center;
    padding: 1rem;
    position: absolute;
    width: 40%;
    left: 30%;
    right: 30%;
    display: table;
  }
  .nav-icon {
    position: absolute;
    left: 30%;
    right: 30%;
    width: 40%;
    padding: 1rem;
  }
  .check {
    position: absolute;
    top: 0.3rem;
  }
  .nav-link-2 {
    text-align: center;
    padding: 1rem;
    width: 100%;
    display: table;
  }

  .typeform-share {
    margin: auto !important;
  }
}
/* ... */

